# barcode-decode-api

./: app.py  makefile  pyproject.toml  requirements.txt
database/: crud.py  schema.py
routers/: barcode.py  user.py
utils/: barcode.py
validation/: model.py
